--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>React Starter</title>
+  <title>Pokepedia - Pokemon Encyclopedia</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 </head>
 
 <body>
   <div id="app"></div>
-  <!-- <script src="https://unpkg.com/pokeapi-js-wrapper/dist/index.js"></script>
-  <script> const Poke = new Pokedex.Pokedex(); </script> -->
 </body>
 
 </html>
